--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,12 @@
 language: node_js
-node_js:
-  - 4.0
-before_script:
-  - npm install -g mocha
-  - npm install -g istanbul
-script: npm test
-sudo: required
+
 dist: trusty
+
+sudo: required
+
+node_js:
+  - 8
+
+script:
+  - npm test
+  - npm run lint
